--- a/about/about.css
+++ b/about/about.css
@@ -136,27 +136,13 @@ header {
     font-weight: 400;
     font-size: 42px;
     margin-bottom: 20px;
-    color: #000000;
+    color: #3b342d;
     border-bottom: 2px solid #3b342d;
     padding-bottom: 10px;
 }
 
 .whoami{
 text-align: center;
-}
-
-.quote {
-    font-style: italic;
-    margin-bottom: 20px;
-    padding-left: 20px;
-    border-left: 3px solid #3b342d;
-    font-size: 18px;
-}
-
-.quote-author {
-    text-align: right;
-    font-weight: 500;
-    margin-top: 8px;
 }
 
 #footer {
@@ -222,7 +208,7 @@ text-align: center;
 
 .about-card h3 {
     font-family: "Kavoon", serif;
-    font-size: 22px;
+    font-size: 24px;
     margin-bottom: 15px;
     color: #3b342d;
     border-bottom: 1px solid #E8D9CD;
@@ -233,6 +219,8 @@ text-align: center;
 
 .about-card p {
     margin: 0 0 12px 0;
+    color: #3b342d;
+    font-size: 20px;
 }
 
 .about-card p:last-child {
