--- a/blog/responsive.css
+++ b/blog/responsive.css
@@ -149,6 +149,16 @@
 
 @media (max-width: 1024px) {
 
+    #name {
+        font-size: 52px;
+    }
+    #links {
+     font-size: 22px;        
+    }
+    .link{
+        padding: 8px 25px;
+    }
+
     /* Categories sidebar maintains consistent button layout */
     .categories-sidebar {
         order: -1;
@@ -293,7 +303,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         text-align: center;
-        grid-gap: 5px;
+        grid-gap: 6px;
         border-radius: 15px;
         font-size: 20px;
     }
@@ -301,7 +311,7 @@
     .link {
         display: flex;
         justify-content: center;
-        padding: 8px 5px;
+        padding: 11px 5px;
         border-radius: 15px;
     }
 
@@ -437,13 +447,7 @@
 
 @media (max-width: 480px) {
     #name {
-        font-size: 28px;
-        margin-left: 20px;
-    }
-
-    #links {
-        font-size: 16px;
-        width: 95%;
+        font-size: 36px;
     }
 
     .latest-posts {
@@ -603,7 +607,7 @@
     .latest-posts {
         width: 85vw;
         margin-inline: calc(50% - 42.5vw);
-        padding: 30px;
+        padding: 15px;
     }
 
     .latest-posts-grid {
